crates/next-custom-transforms/tests/errors/server-actions/server-graph/3/output.js
/* __next_internal_action_entry_do_not_use__ {"b78c261f135a7a852508c2920bd7228020ff4bd7":"x"} */ import { registerServerReference } from "private-next-rsc-server-reference";
import { encryptActionBoundArgs, decryptActionBoundArgs } from "private-next-rsc-action-encryption";
export const x = 1;
import { ensureServerEntryExports } from "private-next-rsc-action-validate";
ensureServerEntryExports([
    x
]);
registerServerReference("b78c261f135a7a852508c2920bd7228020ff4bd7", x);
